--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-2.jpg')"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>TOUR DE FORCE</h2>
-                        <p class="lead mb-0"></p>
+                        <p class="lead mb-0">ACTÍVALA para invocar un poderoso rifle de francotirador personalizado que mata a cualquier enemigo al que impacte directamente. Matar a un enemigo crea un área que permanece en la zona y ralentiza a los jugadores que queden dentro de ella.</p>
                     </div>
                 </div>
                 <div class="row g-0">
